make header translucent instead of using drop shadow

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="{{ root }}/static/fonts.css" />
  </head><!--]]]1-->
  <body>
-  <header class="fixed shadow">
+  <header class="fixed">
    <script>
     (function() {
      function onScroll() {
