--- a/static/main.css
+++ b/static/main.css
@@ -55,10 +55,11 @@ html:not(.top) body > header:not(.dark).fixed.shadow {
   box-shadow: currentColor 0 0.25em 2em -1.5em;
  }
 }
-html:not(.top) body > header:not(.dark).fixed:not(.shadow) {
+html:not(.top) body > header:not(.dark).fixed.line:not(.shadow) {
  box-shadow: var(--bg) 0 0.25em 1em;
 }
-html:not(.top) body > header:not(.dark).fixed:after {
+html body > header:not(.dark):not(.fixed).line:after,
+html:not(.top) body > header:not(.dark).fixed.line:after {
  content: ""; display: block;
  width: 100%; height: 1em;
  border-bottom-width: 1px; border-bottom-style: solid;
