Add Gumshoe to highlight active section

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="{{ root }}/static/colors.css" />
   <link rel="stylesheet" href="{{ root }}/static/main.css" />
   <link rel="stylesheet" href="{{ root }}/static/fonts.css" />
+  <script src="{{ root }}/static/gumshoe.polyfills.min.js" async></script>
   <script src="{{ root }}/static/main.js" async></script>
  </head>
  <body>
