--- a/static/main.css
+++ b/static/main.css
@@ -159,8 +159,8 @@ h5 a[href^="#"], h6 a[href^="#"] {
  color: inherit;
  text-decoration: none;
 }
-h2 a[href^="#"]:hover:after, h3 a[href^="#"]:hover:after, h4 a[href^="#"]:hover:after,
-h5 a[href^="#"]:hover:after, h6 a[href^="#"]:hover:after {
+h2:hover a[href^="#"]:after, h3:hover a[href^="#"]:after, h4:hover a[href^="#"]:after,
+h5:hover a[href^="#"]:after, h6:hover a[href^="#"]:after {
  content: " #";
  position: relative; top: -0.125em;
  font-size: 0.875em;
